force-app/main/default/objects/Grant_Application__c/fields/Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget__c</fullName>
    <label>Annual Operating Budget</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>