force-app/main/default/objects/Grant_Application__c/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <label>Award Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>