force-app/main/default/objects/Grant_Application__c/fields/Award_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Award_Breakdown__c</fullName>
    <label>Award Breakdown</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>