force-app/main/default/objects/Grant_Application__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Primary Contact Name</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>