force-app/main/default/objects/Grant_Application__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
    <required>true</required>
</CustomField>