force-app/main/default/objects/Grant_Application__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN (Tax ID)</label>
    <type>Text</type>
    <length>12</length>
    <required>true</required>
    <description>IRS Employer Identification Number</description>
</CustomField>