force-app/main/default/objects/Grant_Application__c/fields/Eligibility_Results__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Results__c</fullName>
    <label>Eligibility Results</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>