force-app/main/default/objects/Grant_Application__c/fields/Eligibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Score__c</fullName>
    <label>Eligibility Score</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>