force-app/main/default/objects/Grant_Application__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <label>Is Eligible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>