force-app/main/default/objects/Grant_Application__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>