force-app/main/default/objects/Grant_Application__c/fields/Num_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Num_Beneficiaries__c</fullName>
    <label>Estimated Beneficiaries</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>