force-app/main/default/objects/Grant_Application__c/fields/Num_Employees__c.field-meta.xml
<CustomField>
    <fullName>Num_Employees__c</fullName>
    <label>Number of Full-Time Employees</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>