force-app/main/default/objects/Grant_Application__c/fields/Organization_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Address__c</fullName>
    <label>Organization Address</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>