force-app/main/default/objects/Grant_Application__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>501(c)(3)</fullName><default>false</default><label>501(c)(3)</label></value>
            <value><fullName>501(c)(4)</fullName><default>false</default><label>501(c)(4)</label></value>
            <value><fullName>Community-Based Organization</fullName><default>false</default><label>Community-Based Organization</label></value>
            <value><fullName>Faith-Based Organization</fullName><default>false</default><label>Faith-Based Organization</label></value>
            <value><fullName>For-Profit Business</fullName><default>false</default><label>For-Profit Business</label></value>
            <value><fullName>Government Agency</fullName><default>false</default><label>Government Agency</label></value>
            <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>