force-app/main/default/objects/Grant_Application__c/fields/Previously_Funded__c.field-meta.xml
<CustomField>
    <fullName>Previously_Funded__c</fullName>
    <label>Previously Funded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>