force-app/main/default/objects/Grant_Application__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Youth Programs</fullName><default>false</default><label>Youth Programs</label></value>
            <value><fullName>Senior Services</fullName><default>false</default><label>Senior Services</label></value>
            <value><fullName>Public Health</fullName><default>false</default><label>Public Health</label></value>
            <value><fullName>Neighborhood Safety</fullName><default>false</default><label>Neighborhood Safety</label></value>
            <value><fullName>Arts &amp; Culture</fullName><default>false</default><label>Arts &amp; Culture</label></value>
            <value><fullName>Workforce Development</fullName><default>false</default><label>Workforce Development</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>