force-app/main/default/objects/Grant_Application__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>