force-app/main/default/objects/Grant_Application__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>