force-app/main/default/objects/Grant_Application__c/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <label>Project Title</label>
    <type>Text</type>
    <length>200</length>
    <required>true</required>
</CustomField>