force-app/main/default/objects/Grant_Application__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>GrantApplicationsReviewed</relationshipName>
</CustomField>