force-app/main/default/objects/Grant_Application__c/fields/Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Comments__c</fullName>
    <label>Reviewer Comments</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>