force-app/main/default/objects/Grant_Application__c/fields/Target_Population__c.field-meta.xml
<CustomField>
    <fullName>Target_Population__c</fullName>
    <label>Target Population Served</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>