force-app/main/default/objects/Grant_Application__c/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <label>Year Founded</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>