force-app/main/default/objects/Grant_Application__c/validationRules/Amount_Under_50K.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Under_50K</fullName>
    <active>true</active>
    <description>Amount requested cannot exceed $50,000</description>
    <errorConditionFormula>Amount_Requested__c &gt; 50000</errorConditionFormula>
    <errorDisplayField>Amount_Requested__c</errorDisplayField>
    <errorMessage>The requested amount cannot exceed $50,000.</errorMessage>
</ValidationRule>