force-app/main/default/objects/Grant_Application__c/validationRules/EIN_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>EIN_Format</fullName>
    <active>false</active>
    <description>Validates that EIN is in the format XX-XXXXXXX</description>
    <errorConditionFormula>NOT(REGEX( TRIM(EIN__c), "^\\d{2}-\\d{7}$"))</errorConditionFormula>
    <errorDisplayField>EIN__c</errorDisplayField>
    <errorMessage>EIN must be in format XX-XXXXXXX (e.g., 52-1234567)</errorMessage>
</ValidationRule>