force-app/main/default/objects/Grant_Application__c/validationRules/Project_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_End_After_Start</fullName>
    <active>true</active>
    <description>Project end date must be after start date</description>
    <errorConditionFormula>Project_End_Date__c &lt;= Project_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Project_End_Date__c</errorDisplayField>
    <errorMessage>Project end date must be after the project start date.</errorMessage>
</ValidationRule>