force-app/main/default/objects/Grant_Application__c/validationRules/Rejection_Requires_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Requires_Comments</fullName>
    <active>true</active>
    <description>Reviewer comments are required when rejecting an application</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Rejected"),
    ISBLANK(Reviewer_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>Reviewer_Comments__c</errorDisplayField>
    <errorMessage>Reviewer comments are required when rejecting an application.</errorMessage>
</ValidationRule>